# LogistiQ-AI

./: .pre-commit-config.yaml  AI_CONTEXT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  _fix_models.py  alembic.ini  init_db.py  main.py  pyproject.toml
backend/agents/: copilot_agent.py  decision_agent.py  gdelt_scanner.py  sentinel_agent.py
backend/api/: analytics_routes.py  auth_routes.py  billing_routes.py  disruption_routes.py  routes_routes.py  shipment_routes.py  simulation_routes.py  websocket_routes.py
backend/billing/: razorpay_client.py  usage_tracker.py
backend/core/: auth.py  config.py  exceptions.py  logging.py  middleware.py  redis.py  schemas.py
backend/db/: database.py  models.py  seed.py
backend/db/migrations/: env.py  script.py.mako
backend/db/migrations/versions/: 002_add_enum_values.py  003_add_missing_columns.py  622e968f61eb_initial_schema.py  730413e36e98_sync_schema.py  dfc14739d20a_make_hashed_password_nullable.py
backend/mcp_servers/: base.py  mcp_notify.py  mcp_routing.py  mcp_satellite.py  mcp_shipment.py  mcp_weather.py
backend/ml/: risk_scorer.py  vrp_solver.py
backend/scripts/: fix_coordinates.py
backend/tests/: _find_urls.py  conftest.py  seed_test_data.py  test_gdelt_scanner.py  test_sentinel_scoring.py
backend/tests/integration/: test_analytics_routes.py  test_auth_routes.py  test_billing_routes.py  test_disruption_routes.py  test_shipment_routes.py  test_simulation_routes.py  test_websocket_routes.py
backend/tests/unit/: test_auth.py  test_exceptions.py  test_gdelt_scanner.py  test_risk_scorer.py  test_usage_tracker.py
docs/: AI_CONTEXT.md  swagger.json
frontend/: .env.example  .firebaserc  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  replace.py  restore.py  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: AuthBackground.tsx  GoogleSignInButton.tsx  WarmupTypewriter.tsx
frontend/src/components/billing/: RazorpayDemoModal.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/map/: FreightMap.tsx  layerConfigs.ts  routeGeometry.ts
frontend/src/hooks/: useServerWarmup.ts  useWebSocket.ts
frontend/src/lib/: api.ts  cities.ts
frontend/src/pages/: AnalyticsPage.tsx  BillingPage.tsx  CopilotPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReportsPage.tsx  RiskPage.tsx  RoutesPage.tsx  SettingsPage.tsx  TrackingPage.tsx
frontend/src/stores/: alert.store.ts  auth.store.ts  map.store.ts  shipment.store.ts  sidebar.store.ts  simulation.store.ts  theme.store.ts
frontend/src/views/: AnalyticsView.tsx  BillingView.tsx  CopilotView.tsx  DashboardView.tsx  RouteOptimizerView.tsx  TrackingView.tsx
infra/: Dockerfile.backend  Dockerfile.frontend  cloudbuild.yaml  docker-compose.yml
